--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "mocha",
     "prebuild": "yarn && yarn run lint",
     "build": "cross-env NODE_ENV=production node --experimental-specifier-resolution=node server/server.js",
+    "buildci": "yarn run prebuild && cross-env NODE_ENV=ci node --experimental-specifier-resolution=node server/server.js",
     "prestart": "yarn && yarn run lint",
     "start": "cross-env NODE_ENV=development nodemon --experimental-specifier-resolution=node server/server.js"
   },
