--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "enterprise-graphql-sever",
   "version": "1.0.0",
   "author": "Nolin D Naidoo <nolinnaidoo77@gmail.com> (https://www.linkedin.com/in/nolindnaidoo/)",
-  "description": "An enterprise-class GraphQL server built using Node, Express, Express-GraphQL, and GraphQL.",
+  "description": "An flexible enterprise-class GraphQL server template built using Node, Express, Express-GraphQL, and GraphQL.",
   "keywords": [
     "express-graphql",
     "express",
@@ -18,13 +18,12 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint server type data --fix",
+    "lint": "eslint data server test type --fix",
     "test": "mocha",
-    "prebuild": "yarn && yarn run lint",
-    "build": "cross-env NODE_ENV=production node --experimental-specifier-resolution=node server/server.js",
-    "buildci": "yarn run prebuild && cross-env NODE_ENV=ci node --experimental-specifier-resolution=node server/server.js",
-    "prestart": "yarn && yarn run lint",
-    "start": "cross-env NODE_ENV=development nodemon --experimental-specifier-resolution=node server/server.js"
+    "pre": "yarn && yarn run lint",
+    "build": "yarn run pre && cross-env NODE_ENV=production node --experimental-specifier-resolution=node server/server.js",
+    "buildci": "yarn run pre && cross-env NODE_ENV=ci node --experimental-specifier-resolution=node server/server.js",
+    "start": "yarn run pre && cross-env NODE_ENV=development nodemon --experimental-specifier-resolution=node server/server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
