update readme and ci for docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - '15'
-install: true
+services:
+  - docker
 script:
   - yarn run buildci
+  - yarn run builddocker
